<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.auth.sign_up.SignUpFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_auth__sign_up__head_tv"
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:text="@string/fragment_auth__sign_up__head_tv"
            app:layout_constraintBottom_toTopOf="@+id/fragment_auth__sign_up__firstname_et"
            app:layout_constraintStart_toStartOf="@id/fragment_auth__sign_up__firstname_et"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_auth__sign_up__firstname_et"
            style="@style/editText"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/fragment__auth__sign_up__firstname_et"
            app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__lastname_et"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__head_tv"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_auth__sign_up__lastname_et"
            style="@style/editText"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/fragment_auth__sign_up__lastname_et"
            app:layout_constraintBottom_toTopOf="@+id/fragment_auth__sign_up__email_et"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__firstname_et" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_auth__sign_up__email_et"
            style="@style/editText"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:hint="@string/fragment_auth__sign_up__email_et"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__terms_cb"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__lastname_et" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/fragment_auth__sign_up__terms_cb"
            style="@style/checkBox"
            android:text="@string/fragment_auth__sign_up__terms_cb"
            app:layout_constraintBottom_toTopOf="@+id/fragment_auth__sign_up__email_cb"
            app:layout_constraintStart_toStartOf="@id/fragment_auth__sign_up__email_et"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth__sign_up__email_et" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/fragment_auth__sign_up__email_cb"
            style="@style/checkBox"
            android:text="@string/fragment_auth__sign_up__email_cb"
            app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__next_btn"
            app:layout_constraintStart_toStartOf="@id/fragment_auth__sign_up__email_et"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth__sign_up__terms_cb" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_auth__sign_up__next_btn"
            style="@style/button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/fragment_auth__sign_up__next_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__email_cb" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
