<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="22dp"
        android:paddingTop="22dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment__main__quiz_results__head_tv"
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment__quiz__quiz_results__head_tv"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/fragment__main__quiz_results__graph_rc"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment__main__quiz_results__res_tv"
            style="@style/boldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:paddingTop="16dp"
            android:text="@string/fragment__quiz__quiz_results__res_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment__main__quiz_results__rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:nestedScrollingEnabled="false"
            tools:itemCount="3"
            tools:listitem="@layout/simple_rv_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment__main__quiz_results__main_btn"
            style="@style/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/fragment__main__quiz_results__main_btn" />
    </LinearLayout>
</ScrollView>