<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.hello.HelloFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment__auth__hello_icst"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment__auth__hello__head_tv"
            style="@style/headerText"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment__hello_welcome_tv"
            app:layout_constraintBottom_toTopOf="@id/fragment__auth__hello_desc_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment__auth__hello_icst" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment__auth__hello_desc_tv"
            style="@style/lightText"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment__hello_desc_tv"
            app:layout_constraintBottom_toTopOf="@id/fragment__auth__hello_start_btn"
            app:layout_constraintStart_toStartOf="@id/fragment__auth__hello__head_tv"
            app:layout_constraintTop_toBottomOf="@id/fragment__auth__hello__head_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment__auth__hello_start_btn"
            style="@style/button"
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:text="@string/fragment__hello_start_btn"
            app:layout_constraintBottom_toTopOf="@id/fragment__auth__hello_register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment__auth__hello_desc_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment__auth__hello_register_btn"
            style="@style/button"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="300dp"
            android:text="@string/fragment__hello_register_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment__auth__hello_start_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
