<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/background"
    tools:context=".screens.main.main_screen.MainScreenFragment">

    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/fragment__main__main_screen__new_test_bt"
        style="@style/button"
        android:text="@string/fragment__main__main_screen_new_test"
        app:layout_constraintBottom_toTopOf="@+id/fragment__main__main_screen__show_results_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/fragment__main__main_screen__show_results_bt"
        style="@style/button"
        android:text="@string/fragment__main__main_screen_old_results"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment__main__main_screen__new_test_bt"
        app:layout_constraintBottom_toTopOf="@id/fragment__main__main_screen__register_bt"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/fragment__main__main_screen__register_bt"
        style="@style/button"
        android:text="@string/fragment__main__main_screen_register"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment__main__main_screen__show_results_bt"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fragment__main__main_screen__theme_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment__main__main_screen__register_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="30dp"
        android:src="@drawable/ic_theme"
        android:background="@color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
